--- a/baylaw-restuarant.html
+++ b/baylaw-restuarant.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Baylaw.ca</title>
+    <title>Oluwaseun.ca</title>
     <head>
     
         <style>
@@ -49,7 +49,7 @@
 </head>
 <header>
         
-    <h1 style="border: 10px" text-shadow: 2px 2px red;> Baylaw Restaurant</h1>
+    <h1 style="border: 10px" text-shadow: 2px 2px red;> Oluwaseun's Restaurant</h1>
     <a href="https://stocksnap.io/search/food">Make an order</a>
     <br>
     <a href="https://stocksnap.io/search/food">Chekout other great deals</a>
@@ -105,7 +105,8 @@
 <footer>
     <h4 style="border: 10px" >Feel free to contact us on any of our communication channels below</h4>
     <p>Address: 121, pearl avenue, toronto</p>
-    <p>Phone: +1 647-121-0021 </p>
+    <p>Phone: +1 647-819-40** </p>
     <p>Email: enquiries@baylaws.ca</p>
+	<p>Email: seunbalog@outlook.com</p>
 </footer>
 </html>
